[project]
name = "polarwarp"
version = "0.1.6"
description = "A Python implementation of polarWarp for processing warp output and s3dlio / sai3-bench oplog files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "xlsxwriter>=3.2.9",
]
