[package]
name = "polarwarp-rs"
version = "0.1.0"
edition = "2024"
authors = ["Russ Fellows <russ.fellows@gmail.com>"]
description = "A Rust implementation of polarWarp for processing oplog files"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.46.0", features = ["csv", "decompress", "lazy", "dtype-datetime", "strings", "temporal", "describe", "ndarray", "zip_with", "performant", "regex"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
zstd = "0.13.3"
thiserror = "2.0.17"
anyhow = "1.0.100"
num-format = "0.4.4"
regex = "1.12.2"
rayon = "1.11.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
