[package]
name = "polarwarp-rs"
version = "0.1.5"
edition = "2021"
authors = ["Russ Fellows <russ.fellows@gmail.com>"]
description = "A Rust implementation of polarWarp for processing oplog files"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.53.0", features = ["csv", "decompress", "lazy", "dtype-datetime", "strings", "temporal", "timezones", "describe", "ndarray", "zip_with", "performant", "regex"] }
clap = { version = "4.5.60", features = ["derive"] }
zstd = "0.13.3"
anyhow = "1.0.102"
num-format = "0.4.4"
regex = "1.12.3"
rust_xlsxwriter = "0.93.0"  # Excel file generation

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
